# demucs-mlx

./: .gitignore  .gitmodules  LICENSE  README.md
.kiro/specs/swift-port/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: conventional-commits.md  project-context.md
cpp/: CMakeLists.txt
cpp/demucs/: apply.cpp  apply.hpp  audio.cpp  audio.hpp  demucs.cpp  demucs.hpp  demucs_api.cpp  demucs_api.hpp  hdemucs.cpp  hdemucs.hpp  htdemucs.cpp  htdemucs.hpp  npy_loader.cpp  npy_loader.hpp  safetensors.cpp  safetensors.hpp  separate.cpp  spec.cpp  spec.hpp  transformer.cpp  transformer.hpp  utils.cpp  utils.hpp  weight_loader.cpp  weight_loader.hpp
cpp/tests/: test_apply.cpp  test_audio.cpp  test_spec.cpp  test_transformer.cpp  test_utils.cpp
swift/: Package.resolved  Package.swift
swift/Sources/DemucsMLX/: Apply.swift  Audio.swift  DConv.swift  DemucsMLX.swift  HDemucs.swift  HTDemucs.swift  SafeTensors.swift  Spec.swift  Transformer.swift  Utils.swift  WeightLoader.swift
swift/Sources/Separator/: Separator.swift
swift/Tests/DemucsMLXTests/: DemucsMLXTests.swift
tools/: build.sh  convert_model.py  download_model.sh  requirements.txt  run_benchmark.sh  test.sh
